# translator-dialect

./: .gitignore  CMakeLists.txt
include/mlir/Dialect/: CMakeLists.txt
include/mlir/Dialect/RISCV/: CMakeLists.txt  RISCVDialect.h  RISCVDialect.td  RISCVOps.h  RISCVOps.td  RV32IDialect.td  RV32IOps.td
include/mlir/Dialect/Translation/: CMakeLists.txt  RegOpInterface.h  RegOpInterface.td  TranslationDialect.h  TranslationDialect.td  TranslationOps.h  TranslationOps.td
include/mlir/IR/: IRMacros.h
lib/Dialect/RISCV/: CMakeLists.txt
lib/Dialect/RISCV/IR/: RISCVDialect.cpp  RISCVOps.cpp
lib/Dialect/Translation/: CMakeLists.txt
lib/Dialect/Translation/IR/: RegOpInterface.cpp  TranslationDialect.cpp  TranslationOps.cpp
unittests/: CMakeLists.txt  GTestMain.cpp  MLIRTest.h
unittests/Dialect/RISCV/: CMakeLists.txt  RISCVOpTest.cpp
unittests/Dialect/Translation/: CMakeLists.txt  TranslationOpTest.cpp
